--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "luxon": "^2.3.2"
   }
 }
